@@ -48,61 +48,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>java11</id>
-            <activation>
-                <jdk>[11,16]</jdk>
-            </activation>
-            <properties>
-                <!-- Required JVM args for Java 11 -> 16 -->
-                <jvm.requiredArgs>
-                    --illegal-access=permit
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports java.base/jdk.internal.util=ALL-UNNAMED
-                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                </jvm.requiredArgs>
-            </properties>
-        </profile>
-        <profile>
-            <id>java17</id>
-            <activation>
-                <jdk>[17,</jdk>
-            </activation>
-            <properties>
-                <!-- Required JVM args for Java 17+ -->
-                <jvm.requiredArgs>
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                    --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-                    --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.util=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                    --add-opens=java.base/java.io=ALL-UNNAMED
-                    --add-opens=java.base/java.util=ALL-UNNAMED
-                </jvm.requiredArgs>
-            </properties>
-        </profile>
-    </profiles>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
-                <configuration>
-                    <argLine>${jvm.requiredArgs}</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
